--- a/src/pages/Home/index.module.css
+++ b/src/pages/Home/index.module.css
@@ -7,7 +7,14 @@ main {
 .initial_container {
     width: 100vw;
     height: 100vh;
-    background-image: url('../../public/client_barber.jpg');
+    /* 
+        github pages
+        background-image: url('../client_barber.jpg'); 
+
+        development
+        background-image: url('../../public/client_barber.jpg');
+    */
+    background-image: url('../client_barber.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -52,17 +59,6 @@ main {
     font-weight: 700;
     color: var(--dark-grey);
     cursor: pointer;
-}
-
-.initial_socialmedias {
-    display: none;
-    justify-content: space-around;
-    gap: 20px;
-}
-
-.initial_socialmedias > svg {
-    color: var(--white);
-    font-size: 2em;
 }
 /**/
 
@@ -136,6 +132,68 @@ main {
 .services_table_price {
     border-bottom: 2px solid var(--dark-grey);
 }
+/**/
+
+.about_container {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, hsla(0, 0%, 20%, 1) 0%, hsla(0, 0%, 13%, 1) 100%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0px;
+}
+
+.about_part1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 18px;
+    box-shadow: 38px 22px 35px 0px rgba(17,17,17,1);
+    padding: 10px;
+    background-color: #222;
+    margin-bottom: 3em;
+}
+
+.about_part1 > img {
+    width: 100%;
+    margin-bottom: 1em;
+}
+
+.about_part1 > p {
+    text-align: center;
+    color: var(--white);
+    font-weight: 700;
+}
+
+.about_part2 {
+    width: 90%;
+    padding: 28px;
+    border-radius: 18px;
+    box-shadow: 38px 22px 35px 0px rgba(17,17,17,1);
+    background-color: #222;
+}
+
+.about_part2 > p {
+    display: flex;
+    color: var(--white);
+    margin: 30px 0px;
+    text-align: center;
+}
+
+.about_icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.about_icons > svg {
+    color: var(--white);
+    font-size: 2.2em;
+}
 
 @media (min-width: 1200px) {
     .initial_title {
@@ -179,5 +237,59 @@ main {
         border-bottom: none;
         border-right: 1px dashed var(--dark-grey);
         padding-bottom: 0em;
+    }
+
+    .about_container {
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(90deg, hsla(0, 0%, 20%, 1) 0%, hsla(0, 0%, 13%, 1) 100%);
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        padding: 40px 20px;
+    }
+    
+    .about_part1 {
+        background-color: #222;
+        padding: 28px;
+        border-radius: 18px;
+        box-shadow: 38px 22px 35px 0px rgba(17,17,17,1);
+    }
+
+    .about_part1 > img {
+        width: 100%;
+    }
+
+    .about_part1 > p {
+        color: var(--white);
+        font-weight: 700;
+    }
+    
+    .about_part2 {
+        width: 40%;
+        background-color: #222;
+        padding: 28px;
+        border-radius: 18px;
+        box-shadow: 38px 22px 35px 0px rgba(17,17,17,1);
+    }
+    
+    .about_part2 > p {
+        display: flex;
+        color: var(--white);
+        margin: 30px 0px;
+        text-align: center;
+    }
+    
+    .about_icons {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+    
+    .about_icons > svg {
+        color: var(--white);
+        font-size: 2.2em;
     }
 }
